# arkitect

./: .env  .env.example  .gitignore  CHANGELOG.md  CLEANUP.md  CONTRIBUTING.md  Cargo.toml  DESCRIPTION.md  Dockerfile  Dockerfile.backend  Documentos - Atalho.lnk  ERROR_HANDLING_FRAMEWORK.md  MCP_INTEGRATION.md  Makefile  PORTFOLIO_ANALYSIS.md  README.md  README_MCP.md  SESSION.md  TASK_MESH_ARCHITECTURE.md  TODO.md  docker-compose.yml  execute_tasks.py  integrar_arkitect.ps1  main.py  mcp.json  mkdocs.yml  pyproject.toml  requirements.txt  run.py  setup.py  start.py  task_mesh.json  task_mesh.yaml  task_mesh_report.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Estruturas_de_projeto/: 1. Estrutura_do_Projeto_ARKITECT.csv
arkitect/: __init__.py
arkitect/agents/: __init__.py  base.py  evolutionary.py  governance.py
arkitect/api/: __init__.py  app.py  server.py
arkitect/core/: __init__.py  consciousness.py  coordinator.py  metrics.py  quantum.py  scheduler.py  symbiotic.py
arkitect/docs/: __init__.py
arkitect/mcp/: __init__.py  server.py
arkitect/ops/: __init__.py
arkitect/ops/postgres/: init.sql
arkitect/ops/prometheus/: prometheus.yml
arkitect/ops/redis/: redis.conf
arkitect/orchestrator/: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  README_GitTaskAgent.md  README_QUICKSTART.md  SUMMARY.md  __init__.py  main.py  prometheus.yml  requirements.txt
arkitect/orchestrator/agents/: __init__.py  git_task_agent.py
arkitect/orchestrator/docs/: git_task_agent_guide.md
arkitect/tests/: __init__.py
arkitect_backend/: README.md  __init__.py  auto_repair_arkitect.py  config.py  dependencies.py  fix_arkitect_structure.py  main.py
arkitect_backend/app/: main.py
arkitect_backend/app/api/: ark_routes.py  parsing_routes.py
arkitect_backend/app/arkitect_engine/: ark_expander.py  autogov_reflector.py  cluster_orchestrator.py  engine_interface.py  semantic_expansion.py  symbolic_map.py
arkitect_backend/app/core/: config.py  parsing.py
arkitect_backend/app/models/: schema.py
arkitect_backend/app/services/: parser.py
arkitect_backend/database/migrations/: initial.py
arkitect_backend/middleware/: auth.py  error_handler.py
arkitect_backend/models/: __init__.py  consciousness.py  quantum_state.py  requests.py  responses.py  task.py
arkitect_backend/routers/: consciousness.py  eon_framework.py  quantum_memory.py  symbiotic_core.py  task_management.py
arkitect_frontend/: Arkitect_UI.py  README.md  generator.py  upload_handler.py  visualizer.py
arkitect_frontend/.streamlit/: config.toml
arkitect_frontend/components/: Layout.js
arkitect_frontend/pages/: index.js
arkitect_frontend/utils/: api.js
config/: .env
development_orchestration/: orchestrator.py
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  DEVELOPMENT.md  FRONTEND_FLOW.md
examples/: basic_usage.py
integration_layer/: connector.py
ops/grafana/provisioning/dashboards/: arkitect.yml
ops/grafana/provisioning/datasources/: prometheus.yml
ops/nginx/: nginx.conf
orchestrator_api/: docker-compose.yml  quick_test_git_agent.py  quickstart.py  start.py  test_api.py
orchestrator_api/agents/: git_task_api.py
orchestrator_api/examples/: git_agent_demo.py
orchestrator_api/scripts/: setup_git_agent.py
orchestrator_api/tests/: test_git_task_agent.py
orchestrator_core/: Cargo.toml  README.md
orchestrator_core/examples/: README.md  backup_demo.rs  error_handling_demo.rs
orchestrator_core/src/: backup.rs  config.rs  core.rs  errors.rs  graph.rs  layers.rs  learning.rs  lib.rs  metrics.rs  symbiotic.rs
prototype_tmp/: Dockerfile.frontend  README.md
prototype_tmp/arkitect_frontend/: app.py
prototype_tmp/docs/: ARKITECT_OVERVIEW.md  INTERNAL_STRUCTURE.md
shared/docs/: README.md
src/: config.py  lib.rs  logger.py  quantum.rs  symbiotic.rs
task_mesh/: config.py  executor.py  parallel_controller.py
task_mesh_core/: Cargo.toml
task_mesh_core/src/: executor.rs  lib.rs  scheduler.rs  state_store.rs  task_registry.rs  types.rs
tests/: test_integration.py
workflows/: ci.yml
